fix compilation and tests for quermatcher plugin. see #34